--- a/Views/Shared/_Coberturas.cshtml
+++ b/Views/Shared/_Coberturas.cshtml
@@ -15,9 +15,9 @@
             </div>
         </div>
     </div>
-    <div class="btn-controls btn-controls-end">        
-        <button type="button" id="brnAgregar" class="btn btn-primary btn-custom">   
-            <span class="fa fa-plus"></span>           
+    <div class="btn-controls btn-controls-end">
+        <button type="button" id="brnAgregar" class="btn btn-primary btn-custom">
+            <span class="fa fa-plus"></span>
             Agregar
         </button>
     </div>
@@ -60,9 +60,21 @@
     </div>
 
     <div class="btn-controls btn-controls-start">
-        <button type="button" class="btn btn-success btn-custom" id="btnGuardar">
-            <span class="fa fa-save"></span> 
-            Guardar
-        </button>
+        <div class="row">
+            <div class="col-12">
+                <button type="button" class="btn btn-success btn-custom" id="btnGuardar">
+                    <span class="fa fa-save"></span>
+                    Guardar
+                </button>
+                <div class="col-12">
+                    <span id="errors"></span>
+                </div>
+                <div class="col-12">
+                    <span id="resp"></span>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
