--- a/Views/Shared/_Busqueda.cshtml
+++ b/Views/Shared/_Busqueda.cshtml
@@ -7,7 +7,7 @@
         </div>
         <div class="col-3">
             <label for="Identificacion">Identificacion</label>
-            <input type="text" value="3640701740000A" class="form-control" id="Identificacion" required
+            <input type="text" value="" class="form-control" id="Identificacion" required
                 placeholder="Identificacion">
         </div>
         <div class="col-3">
